--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,16 @@
 annotated-types==0.7.0
-anyio==4.8.0
-bandit==1.8.2
+anyio==4.9.0
 cffi==1.17.1
 click==8.1.8
-cryptography==44.0.0
-fastapi==0.115.7
+cryptography==44.0.2
+fastapi==0.115.12
 h11==0.14.0
 idna==3.10
-markdown-it-py==3.0.0
-mdurl==0.1.2
-pbr==6.1.0
 pycparser==2.22
-pydantic==2.10.6
-pydantic_core==2.27.2
-Pygments==2.19.1
-PyYAML==6.0.2
-rich==13.9.4
+pydantic==2.11.3
+pydantic_core==2.33.1
 sniffio==1.3.1
-starlette==0.45.3
-stevedore==5.4.0
-typing_extensions==4.12.2
-uvicorn==0.34.0
+starlette==0.46.2
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+uvicorn==0.34.2
