--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,13 @@ cryptography==44.0.2
 fastapi==0.115.12
 h11==0.14.0
 idna==3.10
+iniconfig==2.1.0
+packaging==25.0
+pluggy==1.5.0
 pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
+pytest==8.3.5
 sniffio==1.3.1
 starlette==0.46.2
 typing-inspection==0.4.0
