--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.9.0
+build==1.2.2.post1
 cffi==1.17.1
 click==8.1.8
 cryptography==44.0.2
@@ -12,6 +13,7 @@ pluggy==1.5.0
 pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
+pyproject_hooks==1.2.0
 pytest==8.3.5
 sniffio==1.3.1
 starlette==0.46.2
