--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,18 @@ cffi==1.17.1
 click==8.1.8
 cryptography==44.0.2
 fastapi==0.115.12
+flake8==7.2.0
 h11==0.14.0
 idna==3.10
 iniconfig==2.1.0
+mccabe==0.7.0
 packaging==25.0
 pluggy==1.5.0
+pycodestyle==2.13.0
 pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
+pyflakes==3.3.2
 pyproject_hooks==1.2.0
 pytest==8.3.5
 sniffio==1.3.1
